--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-emotion": "^4.3.0",
+    "gatsby-plugin-feed": "^2.5.0",
+    "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-remark-copy-linked-files": "^2.3.1",
+    "gatsby-remark-emoji": "^0.0.3",
+    "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-prismjs": "^3.5.0",
+    "gatsby-remark-responsive-iframe": "^2.4.1",
+    "gatsby-remark-smartypants": "^2.3.0",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-remark": "^2.8.4",
     "gatsby-transformer-sharp": "^2.5.0",
     "gsap": "^3.2.6",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
