--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "version": "0.1.0",
   "author": "Nathaniel Cho <natejcho@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
-    "gatsby-plugin-emotion": "^4.3.0",
     "gatsby-plugin-feed": "^2.5.0",
     "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.4.0",
@@ -34,7 +31,12 @@
     "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "gatsby-plugin-emotion": "^4.3.2",
+    "prettier": "2.0.5",
+    "tailwindcss": "^1.4.6",
+    "twin.macro": "^1.1.2"
   },
   "keywords": [
     "gatsby"
@@ -44,7 +46,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
